fixed uwsgi router config

--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -8,10 +8,10 @@ master = true
 auto-procname = true
 chdir = /tmp
 
+plugin = syslog
 logger = syslog
 threaded-logger = true
 
-listen = 1000
 fastrouter = /var/run/upaas-router.socket
 chmod-socket = 666
 
