--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.8.4
 
 Package: upaas-router
 Architecture: all
-Depends: ${misc:Depends}, uwsgi-core (>= 1.9.17), uwsgi-emperor (>= 1.9.17), nginx-full
+Depends: ${misc:Depends}, uwsgi-core (>= 1.9.19), uwsgi-emperor (>= 1.9.19), nginx-common
 Description: uPaaS router config files
 
