move to custom deb

--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -1,21 +1,16 @@
 [uwsgi]
 
-# plugins
-autoload = true
-plugins-dir = /usr/lib/uwsgi/plugins
-
 master = true
 auto-procname = true
 chdir = /tmp
+die-on-term = true
 
-plugin = syslog
-logger = syslog
+logger = syslog:uwsgi-fastrouter
 threaded-logger = true
 
 fastrouter = /var/run/upaas-router.socket
 chmod-socket = 666
 
-plugin = fastrouter
 fastrouter-subscription-server = :2626
 fastrouter-stats = :2580
 fastrouter-processes = 2
