use www-data user

--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -8,8 +8,11 @@ die-on-term = true
 logger = syslog:uwsgi-fastrouter
 threaded-logger = true
 
-fastrouter = /var/run/upaas-router.socket
-chmod-socket = 666
+uid = www-data
+gid = www-data
+
+fastrouter = /run/upaas-router/fastrouter.socket
+chmod-socket = 600
 
 fastrouter-subscription-server = :2626
 fastrouter-stats = :2580
