--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -4,6 +4,7 @@ master = true
 auto-procname = true
 chdir = /tmp
 die-on-term = true
+vacuum = true
 
 logger = syslog:uwsgi-fastrouter
 threaded-logger = true
