--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -6,21 +6,28 @@ chdir = /tmp
 die-on-term = true
 vacuum = true
 
-logger = syslog:uwsgi-fastrouter
+logger = syslog:upaas-router
 threaded-logger = true
 
 uid = www-data
 gid = www-data
 
-fastrouter = /run/upaas-router/fastrouter.socket
-chmod-socket = 600
+shared-socket = :80
+http = =0
+http-subscription-server = :2626
+http-stats = :2580
+http-harakiri = 630
+http-events = 256
+http-timeout = 600
+http-keepalive = true
+http-websockets = true
 
-fastrouter-subscription-server = :2626
-fastrouter-stats = :2580
-fastrouter-processes = 2
-fastrouter-harakiri = 630
-fastrouter-events = 256
-fastrouter-timeout = 600
+ssl_ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK
+ssl_cert_path = /etc/upaas/ssl/server.crt
+ssl_key_path = /etc/upaas/ssl/server.key
+shared-socket = :443
+https2 = addr==1,cert=%(ssl_cert_path),key=%(ssl_key_path),spdy=1,ciphers=%(ssl_ciphers)
+sni-dir-ciphers = %(ssl_ciphers)
 
 subscription-tolerance = 60
 subscription-dotsplit = true
