--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -12,6 +12,8 @@ threaded-logger = true
 uid = www-data
 gid = www-data
 
+listen = 1000
+
 shared-socket = :80
 http = =0
 http-subscription-server = :2626
