more tweaks [ci skip]

--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -12,6 +12,9 @@ threaded-logger = true
 uid = www-data
 gid = www-data
 
+http-headers-timeout = 4
+http-connect-timeout = 10
+
 shared-socket = :80
 http = =0
 http-subscription-server = :2626
