--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -15,8 +15,9 @@ gid = www-data
 http-headers-timeout = 4
 http-connect-timeout = 10
 
-shared-socket = :80
-http = =0
+cap = net_bind_service
+
+http = :80
 http-subscription-server = :2626
 http-stats = :2580
 http-harakiri = 630
@@ -28,8 +29,7 @@ http-websockets = true
 ssl_ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK
 ssl_cert_path = /etc/upaas/ssl/server.crt
 ssl_key_path = /etc/upaas/ssl/server.key
-shared-socket = :443
-https2 = addr==1,cert=%(ssl_cert_path),key=%(ssl_key_path),spdy=1,ciphers=%(ssl_ciphers)
+https2 = addr=:443,cert=%(ssl_cert_path),key=%(ssl_key_path),spdy=1,ciphers=%(ssl_ciphers)
 sni-dir-ciphers = %(ssl_ciphers)
 
 subscription-tolerance = 60
