--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -26,7 +26,7 @@ http-timeout = 600
 http-keepalive = true
 http-websockets = true
 
-ssl_ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK
+ssl_ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:HIGH:!aNULL:!eNULL:!EXPORT:!RC4:!DES:!MD5:!PSK:!SSLv2
 ssl_cert_path = /etc/upaas/ssl/server.crt
 ssl_key_path = /etc/upaas/ssl/server.key
 https2 = addr=:443,cert=%(ssl_cert_path),key=%(ssl_key_path),spdy=1,ciphers=%(ssl_ciphers)
