one more upadte, enable RC4 for TLS 1.0

--- a/uwsgi/upaas-router.ini
+++ b/uwsgi/upaas-router.ini
@@ -26,7 +26,7 @@ http-timeout = 600
 http-keepalive = true
 http-websockets = true
 
-ssl_ciphers = ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS:!RC4:!PSK
+ssl_ciphers = EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:EECDH+aRSA+RC4:EECDH:EDH+aRSA:RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS:+RC4:RC4
 ssl_cert_path = /etc/upaas/ssl/server.crt
 ssl_key_path = /etc/upaas/ssl/server.key
 https2 = addr=:443,cert=%(ssl_cert_path),key=%(ssl_key_path),spdy=1,ciphers=%(ssl_ciphers)
